<resources>
    <string name="app_name">Focus</string>

    <string name="title_activity_stock__market">Stock_Market</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_stock__page">Stock_Page</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_dob">Date of Birth (dd/mm/yyyy)</string>
    <string name="hint_country">Country of Residence</string>
    <string name="hint_wealth">Source of Wealth</string>
    <string name="hint_company">Company Name</string>
    <string name="hint_currency">Primary Currency</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_add">Add Client</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_username">Enter Valid Username</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_username_exists">Username Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_username_password">Wrong Username or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Focus</string>
    <string name="title_activity_maps">Client Map</string>
</resources>
