<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/relativeLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@drawable/background_gradient"-->
    <!--tools:context="com.example.group5.focus.activities.LoginActivity">-->

    <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="400dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="123dp"-->
        <!--app:srcCompat="@drawable/cs_logo" />-->

    <!--<EditText-->
        <!--android:id="@+id/editUsername"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_below="@+id/imageView"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="130dp"-->
        <!--android:background="#11000000"-->
        <!--android:drawableLeft="@drawable/ic_action_user"-->
        <!--android:ems="10"-->
        <!--android:hint="Username"-->
        <!--android:inputType="textPersonName"-->
        <!--android:textSize="18dp" />-->

    <!--<EditText-->
        <!--android:id="@+id/editPassword"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_alignLeft="@+id/editUsername"-->
        <!--android:layout_alignStart="@+id/editUsername"-->
        <!--android:layout_below="@+id/editUsername"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:background="#11000000"-->
        <!--android:drawableLeft="@drawable/ic_action_pass"-->
        <!--android:ems="10"-->
        <!--android:hint="Password"-->
        <!--android:inputType="textPassword" />-->

    <!--<android.support.v7.widget.CardView-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_below="@+id/editPassword"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--app:cardBackgroundColor="#14405C"-->
        <!--app:cardCornerRadius="25dp"-->
        <!--app:cardElevation="10dp"-->
        <!--android:layout_marginTop="88dp"-->
        <!--android:id="@+id/cardView">-->

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<TextView-->
                <!--android:id="@+id/textView2"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:text="Login"-->
                <!--android:textColor="#fff"-->
                <!--android:textAppearance="@android:style/TextAppearance.Medium" />-->
        <!--</RelativeLayout>-->

    <!--</android.support.v7.widget.CardView>-->

    <!--<TextView-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/cardView"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="28dp"-->
        <!--android:text="Forgotten Password?"-->
        <!--android:textColor="#000"-->
        <!--android:textSize="14sp" />-->

<!--</RelativeLayout>-->


<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/nestedScrollView"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background_gradient"
android:paddingBottom="20dp"
android:paddingLeft="20dp"
android:paddingRight="20dp"
android:paddingTop="20dp"
tools:context="com.example.group5.focus.activities.LoginActivity">

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/cs_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:maxLines="1"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_user"
            android:textSize="18dp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_pass"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/text_login"
        style="@style/AppTheme.RoundedCornerMaterialButton"/>

    <!--<android.support.v7.widget.AppCompatTextView-->
        <!--android:id="@+id/textViewLinkRegister"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/text_not_member"-->
        <!--android:textSize="16dp" />-->
</android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>

